[gd_scene load_steps=12 format=2]

[ext_resource path="res://Map/map.gd" type="Script" id=1]
[ext_resource path="res://Character/Gravestone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Jet.png" type="Texture" id=3]
[ext_resource path="res://Map/cuttingradius.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 300.0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.3, 0.6, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0.313726, 0.313726, 0.313726, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
damping_random = 1.0
scale = 10.0
color_ramp = SubResource( 7 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.609756 )
colors = PoolColorArray( 1, 1, 0, 1, 1, 0.262745, 0.262745, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
gravity = Vector3( 0, -30, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
radial_accel_random = 1.0
damping = 500.0
damping_random = 1.0
scale = 5.0
color_ramp = SubResource( 10 )

[node name="Map" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )
Gravestone = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 3 )
centered = false
offset = Vector2( -32, -5 )

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 33 )
amount = 64
randomness = 1.0
process_material = SubResource( 8 )

[node name="CuttingRadius" type="Line2D" parent="."]
width = 2.0
default_color = Color( 0.4, 0.501961, 1, 0.588235 )
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="CuttingRadius"]
one_shot = true

[node name="Fire" type="Particles2D" parent="CuttingRadius"]
amount = 100
randomness = 1.0
local_coords = false
process_material = SubResource( 11 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="done_cutting" from="CuttingRadius" to="." method="_on_CuttingRadius_done_cutting"]
[connection signal="timeout" from="CuttingRadius/Timer" to="CuttingRadius" method="_on_Timer_timeout"]
